--- a/templates/index.html
+++ b/templates/index.html
@@ -4,46 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteLocker</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Montserrat:wght@200;300;400;500&family=Raleway:wght@200;300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../byte_locker_app/static/styles/index.css">
+    <link rel="stylesheet" href="../byte_locker_app/static/styles/media-query-index.css">
 </head>
 <body>
     <header>
         <div class="logo-side">
             <img src="../byte_locker_app/static/images/bytelockerlogo.png" alt="ByteLocker">
-            <h1><section>Byte</section><section>Locker</section></h1>
+            <h1><strong>Byte</strong><strong>Locker</strong></h1>
         </div>
-        <div class="search-side">
-            <section>
-                <i class="bi bi-search"></i>
-                <input type="search" name="keys-name" id="keys-id">
-            </section>
-            <button><i class="bi bi-house-door-fill"></i></button>
+        <div class="menu-side">
+            <button><img src="../byte_locker_app/static/images/home.png" alt="Home Button Icon"></button>
         </div>
     </header>
     <main>
         <div class="password-generator">
-            <i class="bi bi-arrow-repeat"></i>
+            <img src="../byte_locker_app/static/images/password-generator.png" alt="Password Generator Button Icon">
             <p>Gerador de senhas</p>
         </div>
         <div class="saved-passwords">
-            <i class="bi bi-key-fill"></i>
+            <img src="../byte_locker_app/static/images/saved-accounts.png" alt="Saved Passwords Button Icon">
             <p>Senhas salvas</p>
         </div>
         <div class="saved-accounts">
-            <i class="bi bi-person-fill-check"></i>
+            <img src="../byte_locker_app/static/images/verified-account.png" alt="Saved Accounts Button Icon">
             <p>Contas salvas</p>
         </div>
         <div class="authenticator">
-            <i class="bi bi-shield-lock-fill"></i>
+            <img src="../byte_locker_app/static/images/two-factor-authentication.png" alt="Two Factor Authentication Button Icon">
             <p>Autenticação</p>
         </div>
         <div class="account-configs">
-            <i class="bi bi-person-circle"></i>
+            <img src="../byte_locker_app/static/images/account-settings.png" alt="Account Settings Button Icon">
             <p>Definições da conta</p>
         </div>
     </main>
-    <footer>
-        <p>Copyright &copy; Todos os direitos reservados</p>
-    </footer>
 </body>
 </html>
