--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
             <img src="../byte_locker_app/static/images/password-generator.png" alt="Password Generator Button Icon">
             <p>Gerador de senhas</p>
         </div>
+        <div class="password-generator-modal">
+            <h1>Gerador de senhas</h1>
+            <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        </div>
         <div class="saved-passwords">
             <img src="../byte_locker_app/static/images/saved-accounts.png" alt="Saved Passwords Button Icon">
             <p>Senhas salvas</p>
@@ -40,6 +44,10 @@
         <div class="account-configs">
             <img src="../byte_locker_app/static/images/account-settings.png" alt="Account Settings Button Icon">
             <p>Definições da conta</p>
+        </div>
+        <div class="help-center">
+            <img src="../byte_locker_app/static/images/support.png" alt="Support">
+            <p>Ajuda</p>
         </div>
     </main>
 </body>
