--- a/templates/index.html
+++ b/templates/index.html
@@ -21,31 +21,31 @@
         </div>
     </header>
     <main>
-        <div class="password-generator">
+        <div class="password-generator option">
             <img src="../byte_locker_app/static/images/password-generator.png" alt="Password Generator Button Icon">
             <p>Gerador de senhas</p>
         </div>
-        <div class="password-generator-modal">
+        <div class="modal">
             <h1>Gerador de senhas</h1>
             <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
         </div>
-        <div class="saved-passwords">
+        <div class="saved-passwords option">
             <img src="../byte_locker_app/static/images/saved-accounts.png" alt="Saved Passwords Button Icon">
             <p>Senhas salvas</p>
         </div>
-        <div class="saved-accounts">
+        <div class="saved-accounts option">
             <img src="../byte_locker_app/static/images/verified-account.png" alt="Saved Accounts Button Icon">
             <p>Contas salvas</p>
         </div>
-        <div class="authenticator">
+        <div class="authenticator option">
             <img src="../byte_locker_app/static/images/two-factor-authentication.png" alt="Two Factor Authentication Button Icon">
             <p>Autenticação</p>
         </div>
-        <div class="account-configs">
+        <div class="account-configs option">
             <img src="../byte_locker_app/static/images/account-settings.png" alt="Account Settings Button Icon">
             <p>Definições da conta</p>
         </div>
-        <div class="help-center">
+        <div class="help-center option">
             <img src="../byte_locker_app/static/images/support.png" alt="Support">
             <p>Ajuda</p>
         </div>
