--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,6 @@
             <img src="../byte_locker_app/static/images/password-generator.png" alt="Password Generator Button Icon">
             <p>Gerador de senhas</p>
         </div>
-        <div class="modal">
-            <h1>Gerador de senhas</h1>
-            <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
-        </div>
         <div class="saved-passwords option">
             <img src="../byte_locker_app/static/images/saved-accounts.png" alt="Saved Passwords Button Icon">
             <p>Senhas salvas</p>
@@ -50,5 +46,10 @@
             <p>Ajuda</p>
         </div>
     </main>
+    <div class="password-generator modal">
+        <h1>Gerador de senhas</h1>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
+    <script src="../byte_locker_app/static/js/index-scripts.js"></script>
 </body>
 </html>
