--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,41 @@
         <h1>Gerador de senhas</h1>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
+    <div class="saved-passwords modal">
+        <header class="modal-header">
+            <h1>Senhas salvas</h1>
+            <button>X</button>
+        </header>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
+    <div class="saved-accounts modal">
+        <header class="modal-header">
+            <h1>Contas salvas</h1>
+            <button>X</button>
+        </header>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
+    <div class="authenticator modal">
+        <header class="modal-header">
+            <h1>Autenticação</h1>
+            <button>X</button>
+        </header>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
+    <div class="account-configs modal">
+        <header class="modal-header">
+            <h1>Definições da conta</h1>
+            <button>X</button>
+        </header>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
+    <div class="help-center modal">
+        <header class="modal-header">
+            <h1>Ajuda</h1>
+            <button>X</button>
+        </header>
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+    </div>
     <script src="../byte_locker_app/static/js/index-scripts.js"></script>
 </body>
 </html>
