--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../byte_locker_app/static/styles/media-query-index.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="logo-side">
             <img src="../byte_locker_app/static/images/bytelockerlogo.png" alt="ByteLocker">
             <h1><strong>Byte</strong><strong>Locker</strong></h1>
