--- a/templates/index.html
+++ b/templates/index.html
@@ -47,41 +47,44 @@
         </div>
     </main>
     <div class="password-generator modal">
-        <h1>Gerador de senhas</h1>
+        <header class="modal-header">
+            <h1>Gerador de senhas</h1>
+            <button id="close-modal-password-generator-btn">X</button>
+        </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
     <div class="saved-passwords modal">
         <header class="modal-header">
             <h1>Senhas salvas</h1>
-            <button>X</button>
+            <button id="close-modal-saved-passwords-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
     <div class="saved-accounts modal">
         <header class="modal-header">
             <h1>Contas salvas</h1>
-            <button>X</button>
+            <button id="close-modal-saved-accounts-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
     <div class="authenticator modal">
         <header class="modal-header">
             <h1>Autenticação</h1>
-            <button>X</button>
+            <button id="close-modal-authenticator-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
     <div class="account-configs modal">
         <header class="modal-header">
             <h1>Definições da conta</h1>
-            <button>X</button>
+            <button id="close-modal-account-configs-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
     <div class="help-center modal">
         <header class="modal-header">
             <h1>Ajuda</h1>
-            <button>X</button>
+            <button id="close-modal-help-center-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
     </div>
