Remoção de loader
Adicionei algumas instruções em JavaScript que permitem com que o gif loader desapareça depois de 4000 ms

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,42 +51,42 @@
             <h1>Gerador de senhas</h1>
             <button id="close-modal-password-generator-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-password-generator-modal">
     </div>
     <div class="saved-passwords modal">
         <header class="modal-header">
             <h1>Senhas salvas</h1>
             <button id="close-modal-saved-passwords-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-saved-passwords-modal">
     </div>
     <div class="saved-accounts modal">
         <header class="modal-header">
             <h1>Contas salvas</h1>
             <button id="close-modal-saved-accounts-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-saved-accounts-modal">
     </div>
     <div class="authenticator modal">
         <header class="modal-header">
             <h1>Autenticação</h1>
             <button id="close-modal-authenticator-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-authenticator-modal">
     </div>
     <div class="account-configs modal">
         <header class="modal-header">
             <h1>Definições da conta</h1>
             <button id="close-modal-account-configs-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-account-configs-modal">
     </div>
     <div class="help-center modal">
         <header class="modal-header">
             <h1>Ajuda</h1>
             <button id="close-modal-help-center-btn">X</button>
         </header>
-        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif">
+        <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-help-center-modal">
     </div>
     <script src="../byte_locker_app/static/js/index-scripts.js"></script>
 </body>
