--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,28 @@
             <button id="close-modal-password-generator-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-password-generator-modal">
+        <div class="modal-details password-generator-modal-details">
+            <section>
+                <input type="text" id="password-1" class="password-input">
+                <button>Copiar</button>
+            </section>
+            <section>
+                <input type="text" id="password-2" class="password-input">
+                <button>Copiar</button>
+            </section>
+            <section>
+                <input type="text" id="password-3" class="password-input">
+                <button>Copiar</button>
+            </section>
+            <section>
+                <input type="text" id="password-4" class="password-input">
+                <button>Copiar</button>
+            </section>
+            <section>
+                <input type="text" id="password-5" class="password-input">
+                <button>Copiar</button>
+            </section>
+        </div>
     </div>
     <div class="saved-passwords modal">
         <header class="modal-header">
@@ -59,6 +81,10 @@
             <button id="close-modal-saved-passwords-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-saved-passwords-modal">
+        <div class="modal-details saved-passwords-modal-details">
+            <p>Nenhuma senha salva no sistema!</p>
+            <button>Adicionar nova senha</button>
+        </div>
     </div>
     <div class="saved-accounts modal">
         <header class="modal-header">
@@ -66,6 +92,10 @@
             <button id="close-modal-saved-accounts-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-saved-accounts-modal">
+        <div class="modal-details saved-accounts-modal-details">
+            <p>Nenhuma conta salva no sistema!</p>
+            <button>Adicionar nova conta</button>
+        </div>
     </div>
     <div class="authenticator modal">
         <header class="modal-header">
@@ -73,6 +103,9 @@
             <button id="close-modal-authenticator-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-authenticator-modal">
+        <div class="modal-details authenticator-modal-details">
+            <p>Não é possível fazer a autenticação em dois passos no momento!</p>
+        </div>
     </div>
     <div class="account-configs modal">
         <header class="modal-header">
@@ -80,6 +113,13 @@
             <button id="close-modal-account-configs-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-account-configs-modal">
+        <div class="modal-details account-configs-modal-details">
+            <img src="../byte_locker_app/static/images/user-icon.png" alt="Foto de perfil do usuário">
+            <p>Manassés Ndombele</p>
+            <p>manassesndombele88@gmail.com</p>
+            <p>Contas salvas: 0</p>
+            <p>Senhas salvas: 0</p>
+        </div>
     </div>
     <div class="help-center modal">
         <header class="modal-header">
@@ -87,6 +127,9 @@
             <button id="close-modal-help-center-btn">X</button>
         </header>
         <img src="../byte_locker_app/static/images/loading-load.gif" alt="Loading Gif" id="loader-help-center-modal">
+        <div>
+            <p>De momento a ajuda não está disponível!</p>
+        </div>
     </div>
     <script src="../byte_locker_app/static/js/index-scripts.js"></script>
 </body>
