--- a/byte_locker_app/static/styles/index.css
+++ b/byte_locker_app/static/styles/index.css
@@ -175,17 +175,35 @@ header.modal-header > button:active {
     height: 50%;
 }
 
+.password-generator-modal-details form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+    width: 100%;
+    height: 50%;
+}
+
 .password-generator-modal-details > section {
     margin: 0.5rem;
+    display: none;
 }
 
 .password-generator-modal-details input {
     background-color: transparent;
     border: 1px solid var(--second_color);
     height: 2rem;
-    width: 12rem;
+    width: 30%;
     border-radius: 8px;
     padding: 0.2rem 0.5rem;
+    margin: 1rem;
+}
+
+.password-generator-modal-details label {
+    font-weight: bolder;
+    color: var(--second_color);
+    font-style: italic;
 }
 
 .password-generator-modal-details button {
